fix wrap?

--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -1,20 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&");
 
-body {
-	margin: 0;
-	padding: 0;
-	background-size: 800% 800%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	justify-items: center;
-	height: 100vh;
-	font-family: "JetBrains Mono", monospace;
-	overflow: hidden;
-	background-color: rgba(0, 0, 0, 0.93);
-	overflow-y: auto;
-}
-
 .container {
 	position: relative;
 	width: 90%;
